tests/sksl/errors/ReservedNameExtern.glsl
### Compilation failed:

error: 1: name 'extern' is reserved
int extern;
    ^^^^^^
1 error
